--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="WhGh6fCUmZOu5_9RdzFeGE67CjzIHcAy8FNqOoi6CQo" />
     <title>Spread The Peanut</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -44,4 +45,5 @@
         <p>&copy; 2025 Peanut Butter Project | All rights reserved.</p>
       </footer>
 </body>
+
 </html>
