--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     
       <footer>
         <p>&copy; 2025 Peanut Butter Project | All rights reserved.</p>
+          <p> <a href="license.html">Licenses</a>  </p>
+          
       </footer>
 </body>
 
 </html>
+
