--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
     
       <footer>
         <p>&copy; 2025 Peanut Butter Project | All rights reserved.</p>
-          <p> <a href="license.html">Licenses</a>  </p>
+         <p>
+      <a href="license.html">Licenses</a> | 
+      <a href="contact.html">Contact Us</a>
+    </p>
           
       </footer>
 </body>
 
 </html>
+
 
