--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Peanut Butter</h1>
         <p>Recipes, Benefits & More</p>
+        <script type="text/javascript" src="https://embeds.iubenda.com/widgets/67cc5898-bd1b-45af-8501-dc0a66c7f629.js"></script>
       </header>
       <nav>
         <a href="#">Home</a>
@@ -54,6 +55,7 @@
 </body>
 
 </html>
+
 
 
 
