--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
 
         <p>&copy; 2025 Peanut Butter Project | All rights reserved.</p>
          <p>
-      <a href="license.html">Licenses</a> | 
-      <a href="contact.html">Contact Us</a>
+      <a href="license.html">Licenses</a> 
+             <a href="license.html">Licenses</a> 
+             
+      <a href="https://www.instagram.com/gopeanuts9/?hl=en">Follow us on Instagram</a>
+             <a href="https://www.pinterest.com/gopeanuts9/">Follow us on Pinterest</a>
+             
              <a href="https://www.iubenda.com/privacy-policy/75541286" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
              <a href="https://www.iubenda.com/privacy-policy/75541286/cookie-policy" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
     </p>
@@ -62,6 +66,7 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
 </body>
 
 </html>
+
 
 
 
