--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <p>Making quick snacks with peanuts is a simple and tasty way to enjoy them. Roasted peanuts, peanut energy balls, and peanut granola bars are easy to take with you, so they're great for busy days. These snacks are healthier than most processed options and only take a few minutes to prepare. These treats are a perfect way to share joy at gatherings or simply reward yourself after a long day. Peanuts add a crunch that transforms any dessert into a nostalgic comfort.</p>
 
         <h2>Easy Peanut Recipes You Can Make Anytime</h2>
-<p>Peanut butter recipes do not need a full kitchen setup or complicated ingredients. Sometimes the best snacks are the ones you can throw together in minutes. Here are a few of my everyday go-to ideas when cravings hit:  
+<p>Peanut butter recipes do not need a full kitchen setup or complicated ingredients. Sometimes the best snacks are the ones you can throw together in minutes. Here are a few of my everyday go-to ideas when cravings hit:</p>  
 <ul>
 <li>PB Banana Roll-Ups: Spread peanut butter on a tortilla, add sliced banana, roll tight, slice and enjoy.</li>
 <li>The Ultimate Toast Upgrade: Toast + peanut butter + honey drizzle + cinnamon = instant happiness.</li>
 <li>Quick Peanut Parfait: Layer yogurt, granola, peanut butter, and berries for a dessert-like snack.</li>
 </ul>
-These simple ideas can turn a dull snack into a feel-good moment. Creaminess, crunch, and sweetness prove peanuts are made for joy.</p>
+<p>These simple ideas can turn a dull snack into a feel-good moment. Creaminess, crunch, and sweetness prove peanuts are made for joy.</p>
 </section>
 
 <section id="health">
@@ -86,6 +86,7 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
 </body>
 
 </html>
+
 
 
 
