--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
           <div class="footer-links">
       <a href="license.html">Licenses</a> | 
       <a href="contact.html">Contact Us</a>
-            <p> <a href="https://www.instagram.com/gopeanuts9/?hl=en">Follow us on Instagram</a></p>    |   
+              <p><a href="https://www.instagram.com/gopeanuts9/">Follow us on Instagram</a></p>    |   
               <p><a href="https://www.pinterest.com/gopeanuts9/">Follow us on Pinterest</a></p>   |
 
              <a href="https://www.iubenda.com/privacy-policy/75541286" class="iubenda-white iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
@@ -86,6 +86,7 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
 </body>
 
 </html>
+
 
 
 
