--- a/index.html
+++ b/index.html
@@ -62,8 +62,16 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
 
 <h2>Why Peanuts Make Life Better</h2>
 <p>Peanuts hold memories. Whether at school, during work breaks, or on cozy nights, they never fail to satisfy hunger quickly. They require no fancy cooking skills or equipment. Peanuts offer comfort, fun, and delicious energy that fits perfectly into a busy lifestyle. That is why this site exists: to share the joy that comes from a spoonful of simple, affordable, happiness-boosting peanut butter.</p>
-</section>
 
+    <h2>Fun Peanut Facts</h2>
+<ul>
+<li>Peanuts are not actually nuts. They are legumes, related to beans and peas.</li>
+<li>More than 40 million metric tons of peanuts are enjoyed worldwide each year.</li>
+<li>Peanuts have more protein per serving than any other nut-based snack.</li>
+<li>One peanut plant can produce over forty peanuts underground.</li>
+</ul>
+<p>Whether roasted, creamy, or crunchy, peanuts make life more enjoyable in every bite.</p>
+</section>    
       </main>
     
       <footer>
@@ -86,6 +94,7 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
 </body>
 
 </html>
+
 
 
 
