--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 }
 </script>
 </header>
+    <div class="banner-top">
+  <a href="#">
+    <img src="img/peanuts_leaderboard_banner.jpg" 
+         alt="Go Peanuts Leaderboard Banner" 
+         width="728" height="90">
+  </a>
+</div>
 
       <nav>
         <a href="#">Home</a>
@@ -84,8 +91,17 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
 <h2>Peanut Moments That Make Life Fun</h2>
 <p>Peanuts are the ultimate companion for everyday moments. They show up when we watch movies with friends, become a midnight snack during long study sessions, and make road trips tastier with every crunchy bite. That tiny jar in the kitchen always saves the day when hunger strikes without warning. Peanuts create laughter and shared memories in the simplest way possible. Life feels lighter when peanuts are nearby.</p>
 
+   
 </section>    
       </main>
+
+    <div class="banner-bottom">
+  <a href="#">
+    <img src="img/peanuts_square_banner.jpg" 
+         alt="Go Peanuts Square Banner" 
+         width="250" height="250">
+  </a>
+</div>
     
       <footer>
         <p>Created by a lifelong peanut lover, this site shares personal recipes, facts, and benefits of peanuts to inspire healthy, flavorful living.</p>
@@ -107,6 +123,7 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
 </body>
 
 </html>
+
 
 
 
