--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <a href="#">Recipes</a>
         <a href="#">Health</a>
         <a href="#">About</a>
+           <a href="content.html">Content</a>
+          
       </nav>
     
       <main id="home">
@@ -99,6 +101,7 @@ Peanuts have been part of my life since childhood. From homemade sandwiches to l
 </body>
 
 </html>
+
 
 
 
