--- a/content.html
+++ b/content.html
@@ -96,7 +96,7 @@
 
     
     <p><strong>Google Maps:</strong>
-        <a href="https://www.google.com/maps/place/Emily+Murphy+Park/" target="_blank">
+        <a href="https://www.google.com/maps/place/Emily+Murphy+Park/">
             https://www.google.com/maps/place/Emily+Murphy+Park/
         </a>
     </p>
@@ -117,4 +117,5 @@
 
 </body>
 </html>
+
 
