--- a/content.html
+++ b/content.html
@@ -96,7 +96,7 @@
 
     
     <p><strong>Google Maps:</strong>
-        <a href="https://www.google.com/maps/place/Emily+Murphy+Park/">
+        <a href="https://www.google.com/maps/place/Emily+Murphy+Park/" target="_blank">
             https://www.google.com/maps/place/Emily+Murphy+Park/
         </a>
     </p>
@@ -117,5 +117,6 @@
 
 </body>
 </html>
+
 
 
