--- a/content.html
+++ b/content.html
@@ -95,7 +95,7 @@
     </p>
 
     
-    <p><strong>Google Maps:</strong>
+    <p><strong>Google Maps</strong>
         <a href="https://www.google.com/maps/place/Emily+Murphy+Park/" target="_blank">
             https://www.google.com/maps/place/Emily+Murphy+Park/
         </a>
@@ -117,6 +117,7 @@
 
 </body>
 </html>
+
 
 
 
